--- a/packages/core/src/scss/components/checkout/customer/_customer.scss
+++ b/packages/core/src/scss/components/checkout/customer/_customer.scss
@@ -134,7 +134,7 @@ $buttonWidthMap: (
 
         #amazonpayCheckoutButton {
             .amazonpay-button-container div {
-                height: 36px;
+                height: 36px !important;
             }
         }
     }
