feat(payment): PI-2177 Pay with Amazon Button display issues at checkout

--- a/packages/core/src/scss/components/checkout/checkoutRemote/_checkoutRemote.scss
+++ b/packages/core/src/scss/components/checkout/checkoutRemote/_checkoutRemote.scss
@@ -19,6 +19,10 @@
         width: remCalc(200px);
         #amazonpayCheckoutButton > div{
             width: 100% !important;
+            height: 50px !important;
+            .amazonpay-button-view1 {
+                grid-template-rows: '65% 15% 20%' !important;
+            }
         }
     }
 
